# opnsense-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
opnsense_mcp/: __init__.py  context.py  errors.py  server.py
opnsense_mcp/tools/: auth.py  captiveportal.py  core.py  cron.py  dhcrelay.py  diagnostics.py  discovery.py  dnsmasq.py  docs.py  firewall.py  firmware.py  haproxy.py  hostdiscovery.py  ids.py  interfaces.py  ipsec.py  kea.py  monit.py  ntpd.py  openvpn.py  radvd.py  registry.py  routes.py  routing.py  syslog.py  trafficshaper.py  trust.py  unbound.py  wireguard.py
tests/: conftest.py
tests/tools/: test_cron.py  test_docs.py  test_errors.py
